Added gui with javaFX and updated the README.md